In-Class changes

--- a/Marguerita_Web1/dev/index.html
+++ b/Marguerita_Web1/dev/index.html
@@ -20,7 +20,7 @@
     </div>
   </header>
 
-  <section class="content-grid site-section" id="hero">
+  <section class="content-grid section-content" id="hero">
     <div class="content-grid-item">
       <h1>Your own custom website within 2 weeks</h1>
 
@@ -30,9 +30,7 @@
     </div>
   </section>
 
-  <section id="hero-img"></section>
-
-  <section class="content-grid site-section" id="ingredients">
+  <section class="content-grid section-content" id="ingredients">
     <div class="content-grid-item">
       <h1>Ingredients</h1>
 
@@ -70,7 +68,7 @@
     </div>
   </section>
 
-  <section class="content-grid site-section" id="mobile">
+  <section class="content-grid section-content" id="mobile">
     <div class="content-grid-item">
       <h1>Mobile</h1>
       <p>Nowadays, we can't ignore mobile anymore. A website that is not prepared
@@ -81,10 +79,14 @@
         <h2>Responsive webdesign</h2>
         <p>We will make sure your website looks great on every device it is viewed on.
           Everyone will be pleased.</p>
+      </article>
 
+      <article>
         <h2>Easy to use</h2>
         <p>Your website will be much easier to use. Trouble zooming and tricky navigation is history.</p>
+      </article>
 
+      <article>
         <h2>73% visit via mobile</h2>
         <p>In 2013, 73% of all internet users accessed the web from a mobile device.
           This is predicted to be over 90% in 2017.</p>
@@ -92,7 +94,7 @@
     </div>
   </section>
 
-  <section class="content-grid site-section" id="about">
+  <section class="content-grid section-content" id="about">
     <div class="content-grid-item">
       <h1>About us</h1>
       <p>WebsiteChef is a tight-knit group of experienced designers and developers
@@ -116,7 +118,7 @@
     </div>
   </section>
 
-  <section class="content-grid site-section" id="pricing">
+  <section class="content-grid section-content" id="pricing">
     <div class="content-grid-item">
       <h1>Pricing</h1>
       <p>Every website comes with the following benefits and features. Do you need more
