Finished padding/margins

--- a/Marguerita_Web1/dev/index.html
+++ b/Marguerita_Web1/dev/index.html
@@ -103,18 +103,25 @@
         template that is being (minimally) customized as if it were their own. We want
         you to know we don't take part in this. We think everyone should have the opportunity
         to have acustom website, built by professionals, at an affordable price.</p>
-      <article>
+    </div>
+  </section>
+
+  <section class="content-grid about-quote">
+    <div class="content-grid-item">
         <h2>Ellen Alphenaar</h2>
         <p>For my event agency, I often need a website for a new event. Websitechef always
-          makes sure I can <strong>launch quickly</strong>, <strong>make it look just the way I want it to</strong> while still
+          makes sure I can <span>launch quickly</span>, <span>make it look just the way I want it to</span> while still
           being very affordable. I found myself a perfect business partner!</p>
+    </div>
+  </section>
 
+  <section class="content-grid about-quote" id="about-last-quote">
+    <div class="content-grid-item">
         <h2>Fred Verloop</h2>
         <a href="#">view website</a>
         <p>My driving-school really needed some help getting online. Websitechef built me a
-          <strong>beautiful</strong>, <strong>fast</strong> and <strong>well functioning</strong> website. I've already <strong>acquired multiple new
-            students</strong> through my new website so you will believe me when I say I'm thrilled!</p>
-      </article>
+          <span>beautiful</span>, <span>fast</span> and <span>well functioning</span> website. I've already <span>acquired multiple new
+            students</span> through my new website so you will believe me when I say I'm thrilled!</p>
     </div>
   </section>
 
@@ -124,7 +131,8 @@
       <p>Every website comes with the following benefits and features. Do you need more
         page designs or perhaps some additional functionalities? Send us an <a href="#">email.</a></p>
 
-      <h2>$1295</h2>
+    <section><h2>$1295</h2></section>
+
       <ul>
         <li>
           <p><img src="img/gallery/check-1.svg" alt="checkmark"><b>12 months premium hosting</b></p>
@@ -142,24 +150,23 @@
           <p><img src="img/gallery/check-5.svg" alt="checkmark"><b>Advanced statistics</b><img src="img/gallery/info-2.svg" alt="info"></p>
         </li>
       </ul>
+  </section>
 
-      <article>
-        <h3>Convinced? Don't wait any longer and put our chefs to work.</h3>
-        <p><i>Do you have a question or do you just want to say hi? Email us on hallo@websitechef.nl.</i></p>
+  <section class="content-grid section-content" id="questions">
+    <div class="content-grid-item">
+        <h1>Convinced? Don't wait any longer and put our chefs to work.</h1>
+        <p>Do you have a question or do you just want to say hi? Email us on <a href="#">hallo@websitechef.nl.</a></p>
         <a href="#">Order now</a>
-      </article>
     </div>
   </section>
 
   <footer class="content-grid" id="footer">
     <div class="content-grid-item">
-      <p>Cruquius</p>
-      <p>Netherlands</p>
-
-      <article>
-        <p><a href="#">hallo@websitechef.nl</a></p>
-      </article>
-
+      <ul>
+        <li><p>Cruquius</p></li>
+        <li><p>Netherlands</p></li>
+        <li><p><a href="#">hallo@websitechef.nl</a></p></li>
+      </ul>
       <p>WebsiteChef is a <a href="#">Codenzo</a> company.</p>
     </div>
   </footer>
