--- a/Marguerita_Web1/dev/index.html
+++ b/Marguerita_Web1/dev/index.html
@@ -18,8 +18,8 @@
 
   <header class="content-grid" id="header">
     <div class="content-grid-item">
-    <img src="img/header/WebsiteChef.jpg" alt="WebsiteChef logo">
-    <a href="#"><img src="img/gallery/bars-solid.svg" alt="menu bars"></a>
+      <img src="img/header/WebsiteChef.jpg" alt="WebsiteChef logo">
+      <a href="#"><img src="img/gallery/bars-solid.svg" alt="menu bars"></a>
     </div>
   </header>
 
@@ -111,20 +111,20 @@
 
   <section class="content-grid about-quote">
     <div class="content-grid-item">
-        <h2>Ellen Alphenaar</h2>
-        <p>For my event agency, I often need a website for a new event. Websitechef always
-          makes sure I can <span>launch quickly</span>, <span>make it look just the way I want it to</span> while still
-          being very affordable. I found myself a perfect business partner!</p>
+      <h2>Ellen Alphenaar</h2>
+      <p>For my event agency, I often need a website for a new event. Websitechef always
+        makes sure I can <span>launch quickly</span>, <span>make it look just the way I want it to</span> while still
+        being very affordable. I found myself a perfect business partner!</p>
     </div>
   </section>
 
   <section class="content-grid about-quote" id="about-last-quote">
     <div class="content-grid-item">
-        <h2>Fred Verloop</h2>
-        <a href="#">view website</a>
-        <p>My driving-school really needed some help getting online. Websitechef built me a
-          <span>beautiful</span>, <span>fast</span> and <span>well functioning</span> website. I've already <span>acquired multiple new
-            students</span> through my new website so you will believe me when I say I'm thrilled!</p>
+      <h2>Fred Verloop</h2>
+      <a href="#">view website</a>
+      <p>My driving-school really needed some help getting online. Websitechef built me a
+        <span>beautiful</span>, <span>fast</span> and <span>well functioning</span> website. I've already <span>acquired multiple new
+          students</span> through my new website so you will believe me when I say I'm thrilled!</p>
     </div>
   </section>
 
@@ -134,7 +134,9 @@
       <p>Every website comes with the following benefits and features. Do you need more
         page designs or perhaps some additional functionalities? Send us an <a href="#">email.</a></p>
 
-    <section><h2>$1295</h2></section>
+      <section>
+        <h2>$1295</h2>
+      </section>
 
       <ul>
         <li>
@@ -157,18 +159,24 @@
 
   <section class="content-grid section-content" id="questions">
     <div class="content-grid-item">
-        <h1>Convinced? Don't wait any longer and put our chefs to work.</h1>
-        <p>Do you have a question or do you just want to say hi? Email us on <a href="#">hallo@websitechef.nl.</a></p>
-        <a href="#">Order now</a>
+      <h1>Convinced? Don't wait any longer and put our chefs to work.</h1>
+      <p>Do you have a question or do you just want to say hi? Email us on <a href="#">hallo@websitechef.nl.</a></p>
+      <a href="#">Order now</a>
     </div>
   </section>
 
   <footer class="content-grid" id="footer">
     <div class="content-grid-item">
       <ul>
-        <li><p>Cruquius</p></li>
-        <li><p>Netherlands</p></li>
-        <li><p><a href="#">hallo@websitechef.nl</a></p></li>
+        <li>
+          <p>Cruquius</p>
+        </li>
+        <li>
+          <p>Netherlands</p>
+        </li>
+        <li>
+          <p><a href="#">hallo@websitechef.nl</a></p>
+        </li>
       </ul>
       <p>WebsiteChef is a <a href="#">Codenzo</a> company.</p>
     </div>
